<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TfEducation</string>
    <string name="sidemenu">메 뉴</string>
    <string name="intro_context" tools:ignore="TypographyEllipsis">
        기계학습이라고도 부르는 머신러닝은 기본적으로 인공지능의 한 부류 중 하나입니다.\n

        컴퓨터를 인간처럼 학습시켜, 규칙을 형성시키는 초기의 여러가지 시도에서 비롯되어
        현재 여러 기술에도 적요오디어 알게모르게 우리의 생활에 녹아들어있기도 합니다.\n

        머신러니은 배우다보면 ...\n\n\n\n\n





                        (중략)\n\n

        이상으로 저희가 개발한 어플을 사용함에 감사드리며, 당신이 원하는 정보와 성취를
        얻어다길 바랍니다.
    </string>


    <string name="classification">클래스 분류</string>
    <string name="classification_ex">
    클래스 분류란?\n
    전형적인 지도 학습 작업 중 하나이며,\n
    우리 주변에서도 흔히 볼 수 있는 분야 입니다.\n\n

    예를 들면, 스팸메일 분류같은 두 클래스 중 하나를 선택할 수 있는 이진 분류모델이 흔히 알려진 활용 분야이며,\n
    그 외에도 여러가지 클래스 중에서 선택할 수 있는\n
    다중(멀티) 클래스 분류도 있습니다.\n\n

    하지만 ‘이 메일이 스팸인가? 아닌가?’의 이진분류는\n
    간단한 필터를 사용하여 구분 할 수 있는 반면에,\n
    ‘이 이미지는 사람인가? 강아지인가? 물체인가?’ 등\n
    적게는 여러 개, 많게는 수백만개의 클래스 중에서 선택을 해야하는 등의 형태인 다중 클래스 분류는\n
    필터의 형태로 선택, 구분하기에는\n
    아주 긴 시간을 필요로 합니다.\n\n

    그렇기에, 이번시간에는 000하는 예제를 이용하여\n
    머신러닝을 이용한 클래스 분류에 대해서\n
    알아보도록 하겠습니다.
    </string>

    <string name="clustering">클러스터링</string>
    <string name="clustering_ex">
    클러스터링이란?\n
    간단히 말하면  ‘군집화’ 라는 뜻 입니다.\n\n

    이것이 무슨 뜻이냐면,\n
    여러 특성이 유사한 클래스들을 한데 묶어 군집을 형성시키고, 이러한 군집에서 가장 그 특성이 두드러지는 클래스를 대표로 삼아 그 군집의 대표점으로 만드는 기법입니다.\n\n

    간단히 말하면\n
    -수학을 잘하는 반 A\n
    -국어를 잘하는 반 B\n
    가 있다고 가정하면,\n
    A반과 B반이 하나의 군집이고,\n
    A반의 평균점을 가진 A’이라는 학생과\n
    B반의 평균점을 가진 B’이라는 학생이 그 대표점이 됩니다.\n\n

    이러한 클러스터화 된 데이터들이 왜 필요하냐구요?\n
    전교생의 수는 6000명이 있는데,\n
    이 학생들 중에서 수학을 잘하는 친구 한명이 급하게 필요합니다.\n
    이 때, 이미 군집화 된 데이터들을 통해 수학을 잘 하는 친구가 어디있는지 빠르게 찾아낼 수 있게 도와주는 것이\n
    클러스터링 입니다.\n\n

    또한, 이 클러스터링이라는 분야는 데이터 마이닝 기법중 하나로, 이러한 클러스터 분석을 통해\n
    수백만의 데이터를 직접 확인하지 않고,\n
    각각의 클러스터의 대표값을 확인하여\n
    전체적인 데이터의 특성을 파악할 수 있게 만들어 줍니다.\n\n

    이러한 클러스터링의 구조를 간단하게 알아보기 위해\n
    000하는 예제를 통하여 자세히 알아보도록 하겠습니다.
    </string>

    <string name="recommend">추 천</string>
    <string name="recommend_ex">
    추천이란?\n
    이미 우리 실생활에도 많이 녹아들어있는 분야입니다.\n\n

    예를 들면, 제가 유튜브로 ‘배틀그라운드 잘 하는법’ 이라는 동영상을 검색해서 시청했다고 합시다.\n
    그러면 유튜브는 이러한 동영상을 본 저의 특성을 고려하여, ‘배틀그라운드 에임잡는법‘, ‘배틀그라운드 생존력 올리기’ 등의 동영상을 추천해주는 시스템이죠.\n\n

    또, 제가 전자상거래 메뉴에서\n
    CPU인 i7-8700K 를 검색했다고 해봅시다.\n
    그러면 그 상거래 업체에서는 i7-8700k과 찰떡궁합인\n
    다른 부품들을 추천해주거나,\n
    이 i7을 검색한 사용자들이 찾은\n
    다른 제품들을 추천해 주는 등의 여러가지 사례에서\n
    이러한 추천 시스템의 특성을 이해할 수 있을것 입니다.\n\n

    이번 시간에는 000 하는것을 예제로 들어보면서\n
    추천시스템의 알고리즘에 대해서 알아보도록 하겠습니다.
    </string>

    <string name="remind">회 귀</string>
    <string name="remind_ex">
    회귀 분석은 본래 통계학에 근본을 둔 분석방법 입니다.\n
    통계학에서의 회귀분석은\n
    관찰된 연속형 변수들에 대해\n
    두 변수 사이의 모형을 구한 뒤\n
    적합도를 측정해 내는 분석방법 입니다.\n
    또한 이렇게 분석해낸 데이터 모델은\n
    통계적 ‘예측’에 이용될 수 있죠.\n\n

    머신러닝에서의 회귀분석은 통계학의 그것과 크게 다르지 않습니다.\n
    미리 훈련된 데이터 세트를\n
    학습 알고리즘을 통해 학습시킨 후\n
    학습된 알고리즘에 데이터를 입력시켜,\n
    예측값을 얻어내는 것입니다.\n\n

    간단히 선형 회귀를 예로 들자면,\n
    어떠한 사람의 몸무게를 입력하면,\n
    그 사람의 키를 예측하는 등의 문제이죠.\n\n

    이번 시간에는
    </string>

    <string name="reduction">차원 축소</string>
    <string name="reduction_ex">
    차원 축소란 무엇일까요?\n
    차원 축소에 대해 설명하기전에\n
    머신러닝의 차원에 대해서 간단하게 설명하자면,\n
    X축과 Y축으로 이루어진 그래프를 보면\n
    이는 2개의 축으로 이루어진 2차원 그래프입니다.\n
    또한 X축과 Y축, Z축 3개의 축으로 이루어진 그래프는\n
    3차원 그래프죠.\n\n

    그런데, 여기서 생기는 문제는 이러한 차원이 증가된다면 그러한 차원을 표현하기 위한 데이터 양이 기하급수적으로 증가한다는 것입니다.\n
    이러한 차원은 ‘변수‘ 라고도하는데, 이러한 변수가 많아지게 된다면 차원이 커지므로 분석을 위한 최소한의 필요 데이터 건수도 많아지게 됩니다.\n
    그런데, 충분히 공간을 표현할 만큼 큰 데이터 수집 없이 분석을 진행할 경우, 과적합이 발생할 수 도 있기 때문에 이러한 문제들을 해소하기 위해서\n
    차원의 수를 줄이는(변수의 수를 줄이는)\n
    차원  축소가 필요합니다.\n\n

    이러한 차원축소의 종류와 방법에 대해서\n
    이번시간을 통해 알아보도록 하겠습니다.
    </string>
</resources>