<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="활용분야"
        android:textSize="70sp"
        android:textColor="#000000"
        tools:ignore="HardcodedText,PxUsage" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_classification"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150px"
            android:background="@drawable/mybtn"
            android:text="@string/classification"
            android:textSize="40sp"
            tools:ignore="PXUsage" />

        <Button
            android:id="@+id/btn_clustering"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:text="@string/clustering"
            android:textSize="40sp"
            android:background="@drawable/mybtn"
            tools:ignore="PxUsage" />

        <Button
            android:id="@+id/btn_recommend"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:text="@string/recommend"
            android:textSize="40sp"
            android:background="@drawable/mybtn"
            tools:ignore="PxUsage" />

        <Button
            android:id="@+id/btn_remind"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:text="@string/remind"
            android:textSize="40sp"
            android:background="@drawable/mybtn"
            tools:ignore="PxUsage" />

        <Button
            android:id="@+id/btn_reduction"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:layout_marginBottom="100px"
            android:text="@string/reduction"
            android:textSize="40sp"
            android:background="@drawable/mybtn"
            tools:ignore="PxUsage" />
    </LinearLayout>
</LinearLayout>